data/raw_logs/lexical/lex_20.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_20.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_20.c:1:25: error: expected expression before ';' token
    1 | int main() { int x = 5 |; }
      |                         ^
